Frontend: style and performance fixes
- LibraryPage.js: now uses concurrent requests instead of in a for loop (adjusted from Tamirlan's feedback: https://github.com/minerva-university/cs162-Dreamify/pull/36#issuecomment-2030226993), improved date formatting, now shows story title instead of topic used for generation, changed story title element to h2 instead of p because that was too small, moved out story-block styling to css file, added a button to create a new story when there is none yet and added comments
- LibraryPage.css: added styling from the js file as explained above and added styling for when there are no stories (including the button)
- UserProfilePage.js & UserProfilePage.css: changed Account information header to h2 from h3 as it was too small increased the size of the text for when there are no children and adjusted text content

--- a/src/pages/styles/UserProfilePage.css
+++ b/src/pages/styles/UserProfilePage.css
@@ -107,3 +107,7 @@
   gap: 30px;
   margin-top: 20px;
 }
+
+.user-profile-page .child-cards-container .no-children-found {
+  font-size: 2rem;
+}
